2010.03.12: David Nichols
	 * implemented QoreListNode::extract(), QoreString::extract(), and
	   QoreStringNode::extract() functions in preparation for the new
	   extract operator
	 * reimplemented the splice operator with the new operator framework
	   and added more parse type checks

2010.03.11: David Nichols
	 * applied hard typing to FtpClient::get() and FtpClient::put() and
	   tagged these methods with QDOM_FILESYSTEM
	 * fixed incorrect type information for some XML functions that can
	   return NOTHING
	 * made delete an operator instead of a statement; corrected
	   inconsistent behavior of the delete operator; no longer shortens
	   the list when deleting the last element
	 * implemented the "remove" operator, which is like delete but does
	   not run object destructors and returns the value removed from the
	   lvalue expression

2010.03.10: David Nichols
	 * implemented new APIs for executing user method variants from
	   external modules, particularly when re-implementing pure virtual
	   c++ functions in Qore (as with the qt4 module)
	 * fixed calling builtin method variants when a user variant overloads
	   the method in a subclass
	 * applied hard typing to the SSLCertificate class
	 * fixed a bug in SSLCertificate::getInfo()
	 * fixed a bug in SSLCertificate::getSignature()
	 * applied hard typing to the SSLPrivateKey class
	 * added tests for SSLCertificate and SSLPrivateKey classes to test.q
	 * updated SSLPrivateKey::constructor() to accept string data (private
	   key in PEM format) and binary data (private key in DER format)

2010.03.09: David Nichols
	 * updated getWord32() for hard typing, added the following functions
	   supporting only hard types (with string and binary arguments for
	   the data pointer):
	   - get_byte()
	   - get_word_16()
	   - get_word_32()
	   - get_word_64()
	 * fixed transactional participation in setting the empty public
	   member list flag
	 * updated variant matching to check class hierarchy when matching