@@ -72,5 +72,6 @@ public:
 #include <qore/intern/QoreDeleteOperatorNode.h>
 #include <qore/intern/QoreRemoveOperatorNode.h>
 #include <qore/intern/QoreSpliceOperatorNode.h>
+#include <qore/intern/QoreExtractOperatorNode.h>
 
 #endif
