@@ -115,6 +115,7 @@
 #include "QoreDeleteOperatorNode.cpp"
 #include "QoreRemoveOperatorNode.cpp"
 #include "QoreSpliceOperatorNode.cpp"
+#include "QoreExtractOperatorNode.cpp"
 #include "ql_thread.cpp"
 #include "ql_io.cpp"
 #include "ql_time.cpp"
